--- a/blueprints/compute/inputs.yaml.template
+++ b/blueprints/compute/inputs.yaml.template
@@ -1,10 +1,17 @@
 subscription_id: ''
 username: ''
 password: ''
+flavor_id: ''
+publisher_name: ''
+offer: ''
+sku: ''
 compute_name: ''
 storage_account_name: ''
+compute_user: ''
+compute_password: ''
 public_key: |
 
 resource_group_name: ''
-network_name: ''
+virtual_network_name: ''
 subnet_name: ''
+account_type: ''
