--- a/blueprints/nodecellar/azure-inputs.yaml.template
+++ b/blueprints/nodecellar/azure-inputs.yaml.template
@@ -1,17 +1,19 @@
 subscription_id: ''
 username: ''
 password: ''
-location: ''
-publisherName: 'Canonical'
-offer: 'UbuntuServer'
-sku: '14.04.2-LTS'
-version: 'latest'
-flavor_id: 'Standard_A1'
-compute_name: ''
-storage_account_name: ''
+flavor_id: ''
+publisher_name: ''
+offer: ''
+sku: ''
+node_js_compute_name: ''
+mongod_compute_name: ''
+mongod_storage_account_name: ''
+nodejs_storage_account_name: ''
 compute_user: ''
 compute_password: ''
 public_key: |
+
 resource_group_name: ''
-management_subnet_name: ''
-management_network_name: ''
+virtual_network_name: ''
+subnet_name: ''
+account_type: ''
