--- a/blueprints/nodecellar/azure-inputs.yaml.template
+++ b/blueprints/nodecellar/azure-inputs.yaml.template
@@ -6,9 +6,7 @@ publisher_name: ''
 offer: ''
 sku: ''
 node_js_compute_name: ''
-mongod_compute_name: ''
-mongod_storage_account_name: ''
-nodejs_storage_account_name: ''
+mongod_compute_name : ''
 compute_user: ''
 compute_password: ''
 public_key: |
@@ -17,3 +15,7 @@ resource_group_name: ''
 virtual_network_name: ''
 subnet_name: ''
 account_type: ''
+mongod_storage_account_name: ''
+nodejs_storage_account_name: ''
+mongod_storage_account_deletable: false
+nodejs_storage_account_deletable: false
