--- a/blueprints/compute/inputs.yaml.template
+++ b/blueprints/compute/inputs.yaml.template
@@ -15,3 +15,10 @@ resource_group_name: ''
 virtual_network_name: ''
 subnet_name: ''
 account_type: ''
+
+# To add disks to the machine, make a list of disk with these properties:
+# name, size (in GiB), attach (True or False) and caching (ReadWrite, ReadOnly, None)
+# Example:
+# disks:
+#   - { name: 'datadisk-1', size: 100, attache: False, caching: 'None' }
+#   - { name: 'datadisk-2', size: 500, attache: False, caching: 'ReadWrite' }
