--- a/blueprints/inputs.yaml.template
+++ b/blueprints/inputs.yaml.template
@@ -17,3 +17,10 @@ virtual_network_name: ''
 virtual_network_address_prefix: ''
 subnet_name: ''
 subnet_address_prefix: ''
+
+# To add disks to the machine, make a list of disk with these properties:
+# name, size (in GiB), attach (True or False) and caching (ReadWrite, ReadOnly, None)
+# Example:
+# disks:
+#   - { name: 'datadisk-1', size: 100, attache: False, caching: 'None' }
+#   - { name: 'datadisk-2', size: 500, attache: False, caching: 'ReadWrite' }
