--- a/blueprints/manager/azure-manager-blueprint.yaml
+++ b/blueprints/manager/azure-manager-blueprint.yaml
@@ -55,6 +55,8 @@ inputs:
     type: string
   subnet_address_prefix:
     type: string
+  network_interface_name:
+    type: string
   manager_disks:
     default: {}
 
@@ -72,7 +74,7 @@ node_templates:
       azure_config: { get_property: [azure_configuration, azure_config] }
     relationships:
       - target: manager_resource_group
-        type: cloudify.azure.relationships.storage_account_connected_to_resource_group
+        type: cloudify.azure.relationships.storage_account_contained_in_resource_group
 
   manager_network:
     type: cloudify.azure.nodes.Network
@@ -82,7 +84,7 @@ node_templates:
       azure_config: { get_property: [azure_configuration, azure_config] }
     relationships:
       - target: manager_resource_group
-        type: cloudify.azure.relationships.network_connected_to_resource_group
+        type: cloudify.azure.relationships.network_contained_in_resource_group
 
   manager_subnet:
     type: cloudify.azure.nodes.Subnet
@@ -93,6 +95,14 @@ node_templates:
     relationships:
       - target: manager_network
         type: cloudify.azure.relationships.subnet_connected_to_network
+
+  manager_nic:
+    type: cloudify.azure.nodes.NetworkInterfaceCard
+    properties:
+      network_interface_name: {get_input: subnet_name}
+    relationships:
+      - target: manager_network
+        type: cloudify.azure.relationships.nic_connected_to_subnet
 
   azure_configuration:
     type: azure_configuration
@@ -123,13 +133,11 @@ node_templates:
       install_agent: false
     relationships:
       - target: manager_resource_group
-        type: cloudify.azure.relationships.instance_connected_to_resource_group
+        type: cloudify.azure.relationships.instance_contained_in_resource_group
       - target: manager_storage_account
-        type: cloudify.azure.relationships.instance_connected_to_storage_account
-      - target: manager_network
-        type: cloudify.azure.relationships.instance_connected_to_network
-      - target: manager_subnet
-        type: cloudify.azure.relationships.instance_connected_to_subnet
+        type: cloudify.azure.relationships.instance_depends_on_storage_account
+      - target: manager_nic
+        type: cloudify.azure.relationships.instance_connected_to_nic
 
   manager_disk:
     type: cloudify.azure.nodes.Datadisks
